test/fixtures/render_basic_snapshot.txt
   1 # title            
   2                    
   3 foo                
   4 bar 日本語 編集    
   5 baz                
     ~                  
     ~                  
-- NORMAL -- [No Na 1:1 